grammar/src/lexer/snapshots/grammar__lexer__subset_cons__tests__epsilon_transitions.snap
---
source: grammar/src/lexer/subset_cons.rs
expression: "(nfa, dfa)"
---
(
    Nfa {
        transitions: {
            (
                State(0),
                Some(
                    1,
                ),
            ): {
                State(0),
            },
            (
                State(0),
                Some(
                    0,
                ),
            ): {
                State(1),
                State(2),
            },
            (
                State(0),
                None,
            ): {
                State(1),
            },
            (
                State(1),
                Some(
                    1,
                ),
            ): {
                State(1),
            },
            (
                State(1),
                None,
            ): {
                State(2),
            },
            (
                State(2),
                Some(
                    0,
                ),
            ): {
                State(2),
            },
            (
                State(2),
                Some(
                    1,
                ),
            ): {
                State(2),
            },
        },
        state_letters: {
            State(0): {
                1,
                0,
            },
            State(1): {
                1,
            },
            State(2): {
                0,
                1,
            },
        },
        accept_states: {
            State(2): (
                1,
                "final",
            ),
        },
    },
    Dfa {
        start: 0,
        transitions: {
            (
                State(0),
                1,
            ): State(0),
            (
                State(0),
                0,
            ): State(1),
            (
                State(1),
                1,
            ): State(1),
            (
                State(1),
                0,
            ): State(2),
            (
                State(2),
                0,
            ): State(2),
            (
                State(2),
                1,
            ): State(2),
        },
        accept_states: {
            State(0): "final",
            State(1): "final",
            State(2): "final",
        },
    },
)
