grammar/src/lexer/snapshots/grammar__lexer__subset_cons__tests__no_epsilon_transitions.snap
---
source: grammar/src/lexer/subset_cons.rs
expression: "(nfa, dfa)"
---
(
    Nfa {
        transitions: {
            (
                State(0),
                Some(
                    0,
                ),
            ): {
                State(0),
            },
            (
                State(0),
                Some(
                    1,
                ),
            ): {
                State(1),
            },
            (
                State(1),
                Some(
                    0,
                ),
            ): {
                State(1),
                State(2),
            },
            (
                State(1),
                Some(
                    1,
                ),
            ): {
                State(1),
            },
            (
                State(2),
                Some(
                    1,
                ),
            ): {
                State(1),
                State(2),
            },
            (
                State(2),
                Some(
                    0,
                ),
            ): {
                State(2),
            },
        },
        state_letters: {
            State(0): {
                0,
                1,
            },
            State(1): {
                0,
                1,
            },
            State(2): {
                1,
                0,
            },
        },
        accept_states: {
            State(2): (
                1,
                "final",
            ),
        },
    },
    Dfa {
        start: 0,
        transitions: {
            (
                State(0),
                0,
            ): State(0),
            (
                State(0),
                1,
            ): State(1),
            (
                State(1),
                0,
            ): State(2),
            (
                State(1),
                1,
            ): State(1),
            (
                State(2),
                0,
            ): State(2),
            (
                State(2),
                1,
            ): State(2),
        },
        accept_states: {
            State(2): "final",
        },
    },
)
